# exiberty

./: .gitignore  CMakeLists.txt  FindGCC.cmake  build.sh
cmake/: FindGCC.cmake  FindGCC_EXTRACT.cmake
libiberty/: Makefile  config.status
src/: main.cpp
